--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-bootstrap": "^1.1.1",
+    "react-device-frame": "^2.0.4",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
