--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.0",
     "next": "9.4.4",
+    "puppeteer": "^5.2.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.1.1",
     "react-device-frame": "^2.0.4",
