--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "next": "9.4.4",
     "puppeteer": "^5.2.1",
     "react": "16.13.1",
